welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:4: error: Unmatched closing brace '}' ignored here
	if(estSurBiscuit()){recule(6);return vuBiscuit();}else{droite();avance();gauche();}}} 
                                                                                           ^